[tool.poetry]
name = "lovelaice"
version = "0.1.0"
description = ""
authors = ["Alejandro Piad-Morffis <apiad@apiad.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pygls = "^1.0.1"
openai = "^0.27.2"
langchain = "^0.0.131"
pyllamacpp = "^1.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
